# 26th-summer-YbigtaSearchAgent

./: .env  .env.example  .gitattributes  .gitignore  01-rag-poc.ipynb.ipynb  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  STARTUP_GUIDE.md  TROUBLESHOOTING.md  app.py  build_unified_chroma.py  create_gdrive_vector_db.py  create_github_vector_db.py  create_notion_vector_db.py  create_vector_db.py  debug_transcript_flow.py  docker-compose.yml  f2c.py  faiss_to_chroma.py  faiss_to_elasticsearch.py  fiass2chroma.py  fiass_to_chroma.py  main.py  migrate_faiss_to_chroma_multi.py  notion_pages_cache.json  package-lock.json  package.json  parsed_cache.json  processed_repos_cache.json  prometheus.yml  prometheus_test.py  pyproject.toml  read_data.py  requirements-minimal.txt  requirements.txt  run-docker.bat  run-docker.sh  test_api.py  (+7 more)
.claude/: settings.local.json
.ipynb_checkpoints/: 01-rag-poc.ipynb-checkpoint.ipynb
chroma_all/: chroma.sqlite3
data/: README.md  rules.txt
deprecated/: create_github_vector_db.py
electron/: main.js  preload.js
faiss_index/: index.faiss  index.pkl
gdrive_faiss_index/: index.pkl
generated_readmes/: 24th-project-demystifying-wall-street_README.md  Alin-Coinboard_README.md  AlphaChu_README.md  Archive_README.md  BARD_README.md  DataAnalyticsWiki_README.md  DeepNLP-Study_README.md  Deep_learning_README.md  Design_web_study_README.md  Nietzsche_README.md  SparkStudy_README.md  WeeklyDataScience_README.md  alpacapaca_README.md  facebigta_README.md  korea_geo_coder_r_README.md  pytorch-hair-segmentation_README.md  sentimental-analysis_README.md  topic-modeling_README.md  webtoon_stats_api_server_README.md  ybigta.org_README.md
public/: index.html
(+112 files in other folders)
